fix: adjust card width on mobile breakpoint

--- a/src/components/Sections/Projects/Projects.module.scss
+++ b/src/components/Sections/Projects/Projects.module.scss
@@ -54,5 +54,9 @@
   .container {
     border-radius: 0;
     border-inline: 0;
+
+    .projects_container {
+      width: calc(100% - 32px);
+    }
   }
 }
